[project]
name = "kcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "gensim>=4.4.0",
    "kiwipiepy>=0.23.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "protobuf>=7.34.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
]
